# spoa

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
include/spoa/: alignment.hpp  alignment_engine.hpp  graph.hpp  spoa.hpp
src/: alignment.cpp  alignment.hpp  alignment_engine.cpp  chain.cpp  chain.hpp  dispatcher.cpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  main.cpp  node.cpp  node.hpp  poa.cpp  reader.cpp  reader.hpp  sequence.cpp  sequence.hpp  simd_alignment.cpp  simd_alignment.hpp  simd_alignment_engine.cpp  simd_alignment_engine.hpp  simd_alignment_engine_dispatch.cpp  simd_alignment_engine_impl.hpp  simd_alignment_engine_implementation.hpp  sisd_alignment.cpp  sisd_alignment.hpp  sisd_alignment_engine.cpp  sisd_alignment_engine.hpp  spoa.cpp  spoa.hpp
test/: spoa_test.cpp
test_data/: test_5000.fq
